--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="Hero container flex mx-auto h-full my-10">
         <div
             class="container mx-auto flex-col-reverse lg:flex  lg:flex-row-reverse lg:justify-between lg:gap-10 lg:flex-shrink items-center space-y-10">
-            <div><img src="./Graphics/undraw_Pair_programming_re_or4x.svg" alt=""></div>
+            <div><img src="./Graphics/undraw_Pair_programming_re_or4x.png" alt=""></div>
             <div><img src="./Graphics/Hero title.png" alt=""></div>
         </div>
     </section>
