--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class=" bg-slate-100">
     <!-- Navbar -->
     <header class="text-gray-600 body-font">
-            <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+        <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <p class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
                 <img width="150px" src="./Graphics\ISTA ZENATA.png" alt="">
             </p>
@@ -27,7 +27,7 @@
                 <a href="./Pages/Gallery.html" class="mr-5 text-gray-900">Gallery</a>
                 <a href="./Pages/contact.html" class="mr-5 text-gray-900">Contact</a>
             </nav>
-            </div>
+        </div>
     </header>
 
 
@@ -35,7 +35,7 @@
     <section class="Hero container flex mx-auto h-full my-10">
         <div
             class="container mx-auto flex-col-reverse lg:flex  lg:flex-row-reverse lg:justify-between lg:gap-10 lg:flex-shrink items-center space-y-10">
-            <div><img src="./Graphics/undraw_Pair_programming_re_or4x.png" alt=""></div>
+            <div><img src="./Graphics/hero_home.svg" alt=""></div>
             <div><img src="./Graphics/Hero title.png" alt=""></div>
         </div>
     </section>
