--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
     <!-- Hero Section -->
     <section
-        class="container mx-auto bg-gray-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center rounded-lg py-20">
+        class="container mx-auto bg-gray-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center rounded-lg">
         <div class="flex-col mx-auto items-center justify-center w-[75%] space-y-8">
-            <div class="items-center w-96 mx-auto lg:pt-32"><img src="./Graphics/Laravel.svg" alt=""></div>
+            <div class="items-center w-3/5 md:w-96 mx-auto lg:pt-32"><img src="./Graphics/Laravel.svg" alt=""></div>
             <div class="items-center w-full mx-auto"><img src="./Graphics/Hero_Home.png" alt=""></div>
             <div class="text-center text-4xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career
                 Journey Today!</div>
@@ -109,7 +109,7 @@
             <div class="text-white font-extrabold text-center py-20 text-6xl">Director Word</div>
             <div class="flex flex-col lg:flex-row justify-center items-center">
                 <div
-                    class="h-full w-80 lg:w-[470px] bg-slate-100 backdrop-blur-lg border border-white rounded-full py-1 drop-shadow-xl hover:scale-105 transition-all duration-300 ease-in-out">
+                    class="h-full w-2/5 md:w-80 lg:w-[470px] bg-slate-100 backdrop-blur-lg border border-white rounded-full py-1 drop-shadow-xl hover:scale-105 transition-all duration-300 ease-in-out">
                     <img class="flex justify-center items-center" src="./Graphics/profile.svg" alt="">
                 </div>
                 <div class="hover:scale-105 transition-all duration-300 ease-in-out"><img src="./Graphics/quote.png"
