--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!-- Hero Section -->
     <section
-        class="container mx-auto bg-gray-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center rounded-lg">
+        class="container mx-auto bg-gray-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center rounded-none md:rounded-lg">
         <div class="flex-col mx-auto items-center justify-center w-[75%] space-y-8">
             <div class="items-center w-3/5 md:w-96 mx-auto lg:pt-32"><img src="./Graphics/Laravel.svg" alt=""></div>
             <div class="items-center w-full mx-auto"><img src="./Graphics/Hero_Home.png" alt=""></div>
