--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
 
 
     <!-- Quick About -->
-    <section class="bg-[#00D897]  py-32">
-        <div class="container mx-auto text-center h-full space-y-10">
+    <section class="bg-gradient-to-tr from-[#00D897] to-[#00D897B3]  py-32">
+        <div class="container mx-auto backdrop-blur-lg backdrop-brightness-125 p-20 rounded-lg border w-11/12 md:w-full border-[#ffffff6a] text-center h-full space-y-10">
             <div class="text-5xl font-black text-slate-800">About Us</div>
-            <div class="w-[70vw] mx-auto text-xl">Welcome to OFPPT ISTA Zenata, where we're dedicated to shaping futures
+            <div class="mx-auto text-center flex justify-center text-xl">Welcome to OFPPT ISTA Zenata, where we're dedicated to shaping futures
                 and nurturing talent. With a rich history of
                 excellence in education, we provide top-tier professional training programs designed to equip you with
                 the skills and
