--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold  transition-al  ease-in"
-                            href="./">About</a>
+                            href="./Pages/about.html">About</a>
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
@@ -118,149 +118,83 @@
     </section>
 
     <!-- FAQ -->
-    <section class="body-font overflow-hidden my-20 ">
-        <h1 class=" titre  text-slate-800  font-black text-4xl text-center flex justify-center py-10 mx-auto ">
-            Frequently Asked Question (FAQ) <span class="text-[#00D897] font-black text-4xl">.</span>
-        </h1>
-        <div class="bg-[#00D897] h-2 w-80 mx-auto rounded-lg -mt-5 mb-10 hover:w-[500px] transition-all duration-300 ease-in">
-        </div>
-        <div class="container flex items-center lg:py-20 mx-auto bg-slate-300 py-10 rounded-lg">
-            <div class="lg:w-4/5 mx-auto flex flex-col  space-y-20 lg:flex lg:flex-row gap-10">
-                <div class="lg:w-full flex justify-center items-center w-10/12 mx-auto lg:h-auto object-cover object-center">
-                    <img alt="faq" class="" src="./Graphics/FAQ.svg">
+    <section class=" py-20 container mx-auto">
+        <div id="accordion-flush" data-accordion="collapse"
+            data-active-classes="bg-white dark:bg-gray-900 text-gray-900 dark:text-white"
+            data-inactive-classes="text-gray-500 dark:text-gray-400">
+            <h2 id="accordion-flush-heading-1">
+                <button type="button"
+                    class="flex items-center justify-between w-full py-5 font-medium text-left text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400"
+                    data-accordion-target="#accordion-flush-body-1" aria-expanded="true" aria-controls="accordion-flush-body-1">
+                    <span>What is Flowbite?</span>
+                    <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M9 5 5 1 1 5" />
+                    </svg>
+                </button>
+            </h2>
+            <div id="accordion-flush-body-1" class="hidden" aria-labelledby="accordion-flush-heading-1">
+                <div class="py-5 border-b border-gray-200 dark:border-gray-700">
+                    <p class="mb-2 text-gray-500 dark:text-gray-400">Flowbite is an open-source library of interactive
+                        components built on top of Tailwind CSS including buttons, dropdowns, modals, navbars, and more.</p>
+                    <p class="text-gray-500 dark:text-gray-400">Check out this guide to learn how to <a
+                            href="/docs/getting-started/introduction/"
+                            class="text-blue-600 dark:text-blue-500 hover:underline">get started</a> and start developing
+                        websites even faster with components on top of Tailwind CSS.</p>
                 </div>
-                <div class="lg:w-full w-11/12 flex mx-auto">
-
-                    <div class="w-full space-y-2" id="accordion-collapse" data-accordion="collapse">
-                            <h1 class="text-gray-900 text-3xl title-font font-bold text-center py-5">Frequently Asked Question</h1>
-                            <div>
-                                <h2 id="accordion-collapse-heading-1">
-                                    <button type="button"
-                                        class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rounded focus:ring-4 focus:ring-black dark:focus:ring-black  dark:text-black "
-                                        data-accordion-target="#accordion-collapse-body-1" aria-expanded="true"
-                                        aria-controls="accordion-collapse-body-1">
-                                        <span>WHAT IS OFPPT ISTA ZENATA ?</span> `
-                                        <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
-                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M9 5 5 1 1 5" />
-                                        </svg>
-                                    </button>
-                                </h2>
-                                
-                                <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
-                                    <div class="p-5 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900">
-                                        <p class="mb-2 text-gray-500 dark:text-gray-400">Flowbite is an open-source library of
-                                            interactive components built on top of Tailwind CSS including buttons, dropdowns,
-                                            modals, navbars, and more.</p>
-                                        <p class="text-gray-500 dark:text-gray-400">Check out this guide to learn how to <a
-                                                href="/docs/getting-started/introduction/" class="text-blue-600 dark:text-blue-500 hover:underline">get
-                                                started</a> and start
-                                            developing websites even faster with components on top of Tailwind CSS.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div>
-                                <h2 id="accordion-collapse-heading-2">
-                                    <button type="button"
-                                        class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rounded focus:ring-4 focus:ring-black dark:focus:ring-black  dark:text-black "
-                                        data-accordion-target="#accordion-collapse-body-1" aria-expanded="true"
-                                        aria-controls="accordion-collapse-body-1">
-                                        <span>HOW CAN I APPLY FOR A PROGRAME AT ISTA ZENATA ?</span>
-                                        <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
-                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M9 5 5 1 1 5" />
-                                        </svg>
-                                    </button>
-                                </h2>
-                                <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
-                                    <div class="p-5 border border-b-0 border-gray-200 dark:border-gray-700">
-                                        <p class="mb-2 text-gray-500 dark:text-gray-400">Flowbite is first conceptualized and
-                                            designed using the Figma software so everything you see in the library has a design
-                                            equivalent in our Figma file.</p>
-                                        <p class="text-gray-500 dark:text-gray-400">Check out the <a href="https://flowbite.com/figma/"
-                                                class="text-blue-600 dark:text-blue-500 hover:underline">Figma design system</a>
-                                            based on the utility classes from Tailwind CSS and components from Flowbite.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div>
-                                <h2 id="accordion-collapse-heading-3">
-                                    <button type="button"
-                                        class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rounded focus:ring-4 focus:ring-black dark:focus:ring-black  dark:text-black "
-                                        data-accordion-target="#accordion-collapse-body-1" aria-expanded="true"
-                                        aria-controls="accordion-collapse-body-1">
-                                        <span>HOW LONG DO THE PROGRAME AT ISTA ZENATA <br>
-                                            TYPICALLY LAST ?</span>
-                                        <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
-                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M9 5 5 1 1 5" />
-                                        </svg>
-                                    </button>
-                                </h2>
-                                <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
-                                    <div class="p-5 border border-t-0 border-gray-200 dark:border-gray-700">
-                                        <p class="mb-2 text-gray-500 dark:text-gray-400">The main difference is that the core
-                                            components from Flowbite are open source under the MIT license, whereas Tailwind UI is a
-                                            paid product. Another difference is that Flowbite relies on smaller and standalone
-                                            components, whereas Tailwind UI offers sections of pages.</p>
-                                        <p class="mb-2 text-gray-500 dark:text-gray-400">However, we actually recommend using both
-                                            Flowbite, Flowbite Pro, and even Tailwind UI as there is no technical reason stopping
-                                            you from using the best of two worlds.</p>
-                                        <p class="mb-2 text-gray-500 dark:text-gray-400">Learn more about these technologies:</p>
-                                        <ul class="pl-5 text-gray-500 list-disc dark:text-gray-400">
-                                            <li><a href="https://flowbite.com/pro/" class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite
-                                                    Pro</a></li>
-                                            <li><a href="https://tailwindui.com/" rel="nofollow"
-                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div>
-                                <h2 id="accordion-collapse-heading-3">
-                                    <button type="button"
-                                        class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rounded focus:ring-4 focus:ring-black dark:focus:ring-black  dark:text-black "
-                                        data-accordion-target="#accordion-collapse-body-1" aria-expanded="true"
-                                        aria-controls="accordion-collapse-body-1">
-                                        <span>HOW LONG DO THE PROGRAME AT ISTA ZENATA TYPICALLY LAST ?</span>
-                                        <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
-                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M9 5 5 1 1 5" />
-                                        </svg>
-                                    </button>
-                                </h2>
-                                <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
-                                    <div class="p-5 border border-t-0 border-gray-200 dark:border-gray-700">
-                                        <p class="mb-2 text-gray-500 dark:text-gray-400">The main difference is that the core components
-                                            from Flowbite are open source under the MIT license, whereas Tailwind UI is a paid product.
-                                            Another difference is that Flowbite relies on smaller and standalone components, whereas
-                                            Tailwind UI offers sections of pages.</p>
-                                        <p class="mb-2 text-gray-500 dark:text-gray-400">However, we actually recommend using both
-                                            Flowbite, Flowbite Pro, and even Tailwind UI as there is no technical reason stopping you
-                                            from using the best of two worlds.</p>
-                                        <p class="mb-2 text-gray-500 dark:text-gray-400">Learn more about these technologies:</p>
-                                        <ul class="pl-5 text-gray-500 list-disc dark:text-gray-400">
-                                            <li><a href="https://flowbite.com/pro/"
-                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite
-                                                    Pro</a></li>
-                                            <li><a href="https://tailwindui.com/" rel="nofollow"
-                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-
-                    </div>
-
-
-                    
+            </div>
+            <h2 id="accordion-flush-heading-2">
+                <button type="button"
+                    class="flex items-center justify-between w-full py-5 font-medium text-left text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400"
+                    data-accordion-target="#accordion-flush-body-2" aria-expanded="false"
+                    aria-controls="accordion-flush-body-2">
+                    <span>Is there a Figma file available?</span>
+                    <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M9 5 5 1 1 5" />
+                    </svg>
+                </button>
+            </h2>
+            <div id="accordion-flush-body-2" class="hidden" aria-labelledby="accordion-flush-heading-2">
+                <div class="py-5 border-b border-gray-200 dark:border-gray-700">
+                    <p class="mb-2 text-gray-500 dark:text-gray-400">Flowbite is first conceptualized and designed using the
+                        Figma software so everything you see in the library has a design equivalent in our Figma file.</p>
+                    <p class="text-gray-500 dark:text-gray-400">Check out the <a href="https://flowbite.com/figma/"
+                            class="text-blue-600 dark:text-blue-500 hover:underline">Figma design system</a> based on the
+                        utility classes from Tailwind CSS and components from Flowbite.</p>
+                </div>
+            </div>
+            <h2 id="accordion-flush-heading-3">
+                <button type="button"
+                    class="flex items-center justify-between w-full py-5 font-medium text-left text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400"
+                    data-accordion-target="#accordion-flush-body-3" aria-expanded="false"
+                    aria-controls="accordion-flush-body-3">
+                    <span>What are the differences between Flowbite and Tailwind UI?</span>
+                    <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M9 5 5 1 1 5" />
+                    </svg>
+                </button>
+            </h2>
+            <div id="accordion-flush-body-3" class="hidden" aria-labelledby="accordion-flush-heading-3">
+                <div class="py-5 border-b border-gray-200 dark:border-gray-700">
+                    <p class="mb-2 text-gray-500 dark:text-gray-400">The main difference is that the core components from
+                        Flowbite are open source under the MIT license, whereas Tailwind UI is a paid product. Another
+                        difference is that Flowbite relies on smaller and standalone components, whereas Tailwind UI offers
+                        sections of pages.</p>
+                    <p class="mb-2 text-gray-500 dark:text-gray-400">However, we actually recommend using both Flowbite,
+                        Flowbite Pro, and even Tailwind UI as there is no technical reason stopping you from using the best of
+                        two worlds.</p>
+                    <p class="mb-2 text-gray-500 dark:text-gray-400">Learn more about these technologies:</p>
+                    <ul class="pl-5 text-gray-500 list-disc dark:text-gray-400">
+                        <li><a href="https://flowbite.com/pro/"
+                                class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite Pro</a></li>
+                        <li><a href="https://tailwindui.com/" rel="nofollow"
+                                class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -285,7 +219,7 @@
 
 
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
     <script src="./script.js"></script>
 </body>
 
