--- a/Pages/about.html
+++ b/Pages/about.html
@@ -15,7 +15,7 @@
 
 <body class="background font-[Montserrat]">
     <!-- Navigation Bar -->
-    <header class="container mx-auto">
+    <section class="container mx-auto">
         <nav class="flex justify-between items-center py-8 mx-auto">
             <div
                 class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
@@ -52,7 +52,7 @@
                 <ion-icon onclick="onToggleMenu(this)" name="menu"
                     class="text-3xl cursor-pointer lg:hidden text-slate-800 hover:text-slate-200 transition-all duration-100 ease-in"></ion-icon>
             </div>
-    </header>
+    </section>
 
     <!-- Ofppt Section -->
     <section class="py-20">
