--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
 
     <!-- Hero Section -->
-    <section class="container mx-auto h-[100vh] bg-gray-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center rounded-none md:rounded-lg">
+    <section class="container mx-auto h-[100vh] bg-slate-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center rounded-none md:rounded-lg">
         <div class="flex-col mx-auto items-center justify-center w-[75%] space-y-10 lg:pt-10">
             <div class="items-center w-3/5 md:w-72 mx-auto"><img src="./Graphics/Laravel.svg" alt=""></div>
             <div class="items-center w-full mx-auto"><img src="./Graphics/Hero_Home.png" alt=""></div>
@@ -105,13 +105,13 @@
     <!-- Director Word -->
     <section class=" h-[70vh] flex items-center">
           <figure class="max-w-screen-md mx-auto text-center items-center">
-            <svg class="w-10 h-10 mx-auto mb-3 text-gray-400 dark:text-gray-600" aria-hidden="true"
+            <svg class="w-10 h-10 mx-auto mb-3 text-slate-400 dark:text-slate-600" aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 14">
               <path
                 d="M6 0H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3H2a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Zm10 0h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3h-1a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Z" />
             </svg>
             <blockquote>
-              <p class="text-2xl italic font-medium text-gray-900 dark:text-white">Our objective and our ambition are to offer you higher quality training, an openness to civic life as well as the means
+              <p class="text-2xl italic font-medium text-slate-900 dark:text-white">Our objective and our ambition are to offer you higher quality training, an openness to civic life as well as the means
               to acquire knowledge and skills for successful social and professional integration.
               
               It is therefore with enthusiasm and confidence that the entire community of the Institute will continue its wonderful
@@ -119,10 +119,10 @@
             </blockquote>
             <figcaption class="flex items-center justify-center mt-6 space-x-3">
               <img class="w-6 h-6 rounded-full"
-                src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/michael-gouch.png" alt="profile picture">
-              <div class="flex items-center divide-x-2 divide-gray-500 dark:divide-gray-700">
-                <cite class="pr-3 font-medium text-gray-900 dark:text-white">Micheal Gough</cite>
-                <cite class="pl-3 text-sm text-gray-500 dark:text-gray-400">Directeur de ISTA ZENATA</cite>
+                src="./Images/director.png" alt="profile picture">
+              <div class="flex items-center divide-x-2 divide-slate-500 dark:divide-slate-700">
+                <cite class="pr-3 font-medium text-slate-900 dark:text-white">Mr. El Kashash Lahna</cite>
+                <cite class="pl-3 text-sm text-slate-500 dark:text-slate-400">Directeur de ISTA ZENATA</cite>
               </div>
             </figcaption>
           </figure>
@@ -134,12 +134,12 @@
         <h1 class=" titre font-bold text-3xl text-center flex justify-center py-10 mx-auto ">
             Frequently Asked Question (FAQ) <span class="text-[#00D897] font-bold text-5xl ">.</span>
         </h1>
-        <section class=" bg-slate-300 text-gray-600 body-font overflow-hidden">
+        <section class=" bg-slate-300 text-slate-600 body-font overflow-hidden">
             <div class="container px-5 py-12 mx-auto">
               <div class="lg:w-4/5 mx-auto flex flex-wrap items-center">
                 <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-[450px] object-cover object-center" src="./Graphics/FAQ.svg">
                 <div class="lg:w-2/4 w-full lg:pl-10 lg:py-0 mt-6 lg:mt-0">
-                  <h1 class="text-gray-900 text-3xl title-font font-bold text-center pb-[50px]">Frequently Asked Question</h1>
+                  <h1 class="text-slate-900 text-3xl title-font font-bold text-center pb-[50px]">Frequently Asked Question</h1>
 
 
                   <!-- Dropdown textfield -->
@@ -184,11 +184,11 @@
                       </button>
                     </h2>
                     <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
-                      <div class="p-5 border border-t-0 border-gray-200 dark:bg-slate-100">
+                      <div class="p-5 border border-t-0 border-slate-200 dark:bg-slate-100">
                         <p class="mb-2 text-black dark:text-black">The main difference is that the core components from Flowbite are open source under the MIT license, whereas Tailwind UI is a paid product. Another difference is that Flowbite relies on smaller and standalone components, whereas Tailwind UI offers sections of pages.</p>
                         <p class="mb-2 text-black dark:text-black">However, we actually recommend using both Flowbite, Flowbite Pro, and even Tailwind UI as there is no technical reason stopping you from using the best of two worlds.</p>
                         <p class="mb-2 text-black dark:text-black">Learn more about these technologies:</p>
-                        <ul class="pl-5 text-gray-500 list-disc dark:text-gray-400">
+                        <ul class="pl-5 text-slate-500 list-disc dark:text-slate-400">
                           <li><a href="https://flowbite.com/pro/" class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite Pro</a></li>
                           <li><a href="https://tailwindui.com/" rel="nofollow" class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
                         </ul>
@@ -204,11 +204,11 @@
                       </button>
                     </h2>
                     <div id="accordion-collapse-body-4" class="hidden" aria-labelledby="accordion-collapse-heading-4">
-                      <div class="p-5 border border-t-0 border-gray-200 dark:bg-slate-100">
+                      <div class="p-5 border border-t-0 border-slate-200 dark:bg-slate-100">
                         <p class="mb-2 text-black dark:text-black">The main difference is that the core components from Flowbite are open source under the MIT license, whereas Tailwind UI is a paid product. Another difference is that Flowbite relies on smaller and standalone components, whereas Tailwind UI offers sections of pages.</p>
                         <p class="mb-2 text-black dark:text-black">However, we actually recommend using both Flowbite, Flowbite Pro, and even Tailwind UI as there is no technical reason stopping you from using the best of two worlds.</p>
                         <p class="mb-2 text-black dark:text-black">Learn more about these technologies:</p>
-                        <ul class="pl-5 text-gray-500 list-disc dark:text-gray-400">
+                        <ul class="pl-5 text-slate-500 list-disc dark:text-slate-400">
                           <li><a href="https://flowbite.com/pro/" class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite Pro</a></li>
                           <li><a href="https://tailwindui.com/" rel="nofollow" class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
                         </ul>
