--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </section>
 
     <!-- Director Word -->
-    <section class=" h-[70vh] flex items-center">
+    <section class=" h-full py-48 flex items-center">
           <figure class="max-w-screen-md mx-auto text-center items-center">
             <svg class="w-10 h-10 mx-auto mb-3 text-slate-400 dark:text-slate-600" aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 14">
