--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
-                            href="#">Gallery</a>
+                            href="./Pages/gallery.html">Gallery</a>
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
