--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -39,7 +39,7 @@
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold  transition-al  ease-in"
-                            href="./Pages/about.html">About</a>
+                            href="./about.html">About</a>
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
@@ -47,7 +47,7 @@
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
-                            href="#">Gallery</a>
+                            href="./gallery.html">Gallery</a>
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
