--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -149,7 +149,7 @@
                               <div class="px-8 py-10 relative z-10 w-full border-4 border-green-400 bg-white opacity-0 hover:opacity-100">
                                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+                                <p class="leading-relaxed">exemplaire avec une ventilation naturelle et des façades traversantes pour une meilleure circulation de l'air.</p>
                               </div>
                             </div>
                           </div>
@@ -160,7 +160,7 @@
                               <div class="px-8 py-10 relative z-10 w-full border-4 border-green-400 bg-white opacity-0 hover:opacity-100">
                                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+                                <p class="leading-relaxed">également des dispositifs de récupération des eaux usées pour un usage d'arrosage, ainsi que des</p>
                               </div>
                             </div>
                           </div>
@@ -171,7 +171,7 @@
                               <div class="px-8 py-10 relative z-10 w-full border-4 border-green-400 bg-white opacity-0 hover:opacity-100">
                                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+                                <p class="leading-relaxed">panneaux solaires thermiques pour l'eau chaude sanitaire et les douches. L'éclairage artificiel en LED est équipé</p>
                               </div>
                             </div>
                           </div>
@@ -183,7 +183,7 @@
                               <div class="px-8 py-10 relative z-10 w-full border-4 border-green-400 bg-white opacity-0 hover:opacity-100">
                                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+                                <p class="leading-relaxed">de capteurs de luminosité pour une meilleure gestion de l'énergie. <br>Surface nette : 2 745 m2 SRE</p>
                               </div>
                             </div>
                           </div>
@@ -194,7 +194,8 @@
                               <div class="px-8 py-10 relative z-10 w-full border-4 border-green-400 bg-white opacity-0 hover:opacity-100">
                                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+                                <p class="leading-relaxed">Coût de construction ou de rénovation : 4 170 428 € ,
+                                  Nombre d'unités fonctionnelles : 720 Elèves/étudiants</p>
                               </div>
                             </div>
                           </div>
@@ -205,7 +206,8 @@
                               <div class="px-8 py-10 relative z-10 w-full border-4 border-green-400 bg-white opacity-0 hover:opacity-100">
                                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+                                <p class="leading-relaxed">Adresse : Route Nationale N° 9 JNANE ZENATA AIN HARROUDA 28630 MOHAMMEDIA, Maroc
+                                  Zone climatique.</p>
                               </div>
                             </div>
                           </div>
