--- a/Pages/about.html
+++ b/Pages/about.html
@@ -40,7 +40,7 @@
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
-                            href="#">Gallery</a>
+                            href="./gallery.html">Gallery</a>
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
