--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -35,7 +35,7 @@
                 <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
-                            href="./index.html">Home</a>
+                            href="../index.html">Home</a>
                     </li>
                     <li>
                         <a class="text-slate-800  rounded-md hover:font-extrabold  transition-al  ease-in"
