--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -215,16 +215,18 @@
                       </div>
                     </div>
                   </section>
+                </section>
+  </section>
 <!-- Show more -->
 
                 
 
-   <footer class="text-slate-600 body-font">
+   <footer class="text-slate-600 body-font relative ">
         <div
           class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
           <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
             <a class="flex title-font font-medium items-center md:justify-start justify-center text-slate-900">
-              <img width="150px" src="./Graphics/ISTA ZENATA.png" alt="">
+              <img width="150px" src="../Graphics/ISTA ZENATA.png" alt="">
             </a>
             <p class="mt-2 text-sm text-slate-500">L'etablissement de L'ISTA ZENATA</p>
           </div>
