--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
                 </a>
             </div>
             <div
-                class="container mx-auto right-0 rounded-lg nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 bg-opacity-30 backdrop-blur-xl border border-white lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-lg lg:min-h-fit min-h-[45vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
+                class="container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 bg-opacity-30 backdrop-blur-xl border border-white lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-lg lg:min-h-fit min-h-[45vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
                 <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
                     <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
+                        <a class="text-slate-800   hover:font-extrabold transition-all ease-in"
                             href="./index.html">Home</a>
                     </li>
                     <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold  transition-al  ease-in"
+                        <a class="text-slate-800   hover:font-extrabold  transition-al  ease-in"
                             href="./Pages/about.html">About</a>
                     </li>
                     <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
+                        <a class="text-slate-800   hover:font-extrabold transition-all ease-in"
                             href="#">Activities</a>
                     </li>
                     <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
+                        <a class="text-slate-800   hover:font-extrabold transition-all ease-in"
                             href="./Pages/gallery.html">Gallery</a>
                     </li>
                     <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
-                            href="#">Contact</a>
+                        <a class="text-slate-800   hover:font-extrabold transition-all ease-in"
+                            href="./Pages/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -53,14 +53,14 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="container mx-auto h-[100vh] bg-slate-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center rounded-none md:rounded-lg">
-        <div class="flex-col mx-auto items-center justify-center w-[75%] space-y-10 lg:pt-10">
+    <section class=" h-[100vh] bg-slate-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center ne">
+        <div class="container flex-col mx-auto items-center justify-center w-[75%] space-y-10 lg:pt-10">
             <div class="items-center w-3/5 md:w-72 mx-auto"><img src="./Graphics/Laravel.svg" alt=""></div>
             <div class="items-center w-full mx-auto"><img src="./Graphics/Hero_Home.png" alt=""></div>
             <div class="text-center text-2xl md:text-4xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career
                 Journey Today!</div>
             <div class="flex justify-center items-center pb-5 lg:pb-20">
-                <a class="uppercase justify-center text-center py-3 px-4 text-2xl hover:scale-110 hover:tracking-widest transition-all duration-300 ease-in-out rounded-lg text-slate-800 font-extrabold bg-[#00D897] [box-shadow:0px_8px_50px_0px_rgba(0,_216,_151,_0.50)]"
+                <a class="uppercase justify-center text-center py-3 px-4 text-2xl hover:tracking-[0.2em] transition-all duration-300 ease-in-out  text-slate-800 font-extrabold bg-[#00D897] [box-shadow:0px_8px_50px_0px_rgba(0,_216,_151,_0.50)]"
                     href="">
                     Get Started
                 </a>
@@ -69,11 +69,11 @@
     </section>
 
     <!-- Ista Process  -->
-    <section class=" mt-20 h-full md:h-[100vh] py-20 bg-[#00D897] flex items-center">
+    <section class=" h-full md:h-[100vh] py-20 bg-[#00D897] flex items-center">
         <div
             class="container mx-auto flex-col items-center justify-center space-y-10 space-x-0 j  md:flex md:flex-row md:space-x-10 md:space-y-0 md:justify-between md:items-center">
             <div
-                class=" space-y-2 hover:bg-[#00C288] py-8 rounded-lg px-2 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
+                class=" space-y-2 hover:bg-[#00C288] py-8  px-2 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
                 <div class="justify-center h-full md:h-[350px] items-center"><img class="h-[250px] md:h-[350px] mx-auto"
                         src="./Graphics/Studying.svg" alt=""></div>
                 <div class="text-center font-black tracking-widest uppercase text-white text-2xl">Study.</div>
@@ -82,7 +82,7 @@
                     Study the sector you want with high level education.</div>
             </div>
             <div
-                class=" space-y-2 hover:bg-[#00C288] py-8 rounded-lg px-2 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
+                class=" space-y-2 hover:bg-[#00C288] py-8  px-2 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
                 <div class="justify-center h-full md:h-[350px] items-center"><img class="h-[250px] md:h-[350px] mx-auto"
                         src="./Graphics/certificate.svg" alt=""></div>
                 <div class="text-center font-black tracking-widest uppercase text-white text-2xl">Certificate.</div>
@@ -91,7 +91,7 @@
                     Obtain a international recognized certificate within just 2 Years of studying.</div>
             </div>
             <div
-                class=" space-y-2 hover:bg-[#00C288] py-8 rounded-lg px-2 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
+                class=" space-y-2 hover:bg-[#00C288] py-8  px-2 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
                 <div class="justify-center h-full md:h-[350px] items-center"><img class="h-[250px] md:h-[350px] mx-auto"
                         src="./Graphics/business man.svg" alt=""></div>
                 <div class="text-center font-black tracking-widest uppercase text-white text-2xl">Work.</div>
@@ -104,25 +104,25 @@
 
     <!-- Director Word -->
     <section class=" h-[100vh] py-48 flex items-center container mx-auto">
-          <figure class="max-w-screen-md mx-auto text-center items-center">
-            <svg class="w-10 h-10 mx-auto mb-3 text-slate-400 dark:text-slate-600" aria-hidden="true"
+          <figure class="container max-w-screen-md mx-auto text-center items-center">
+            <svg class="w-10 h-10 mx-auto mb-3 text-slate-400 " aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 14">
               <path
                 d="M6 0H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3H2a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Zm10 0h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3h-1a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Z" />
             </svg>
             <blockquote>
-              <p class="text-2xl italic font-medium text-slate-800 dark:text-white">Our objective and our ambition are to offer you higher quality training, an openness to civic life as well as the means
+              <p class="text-lg md:text-2xl italic font-medium text-slate-800 ">Our objective and our ambition are to offer you higher quality training, an openness to civic life as well as the means
               to acquire knowledge and skills for successful social and professional integration.
               
               It is therefore with enthusiasm and confidence that the entire community of the Institute will continue its wonderful
               human adventure. May each of its actors be thanked!</p>
             </blockquote>
-            <figcaption class="flex items-center justify-center mt-6 space-x-3">
+            <figcaption class="flex flex-col md:flex md:flex-row items-center justify-center mt-6 space-x-3">
               <img class="w-6 h-6 rounded-full"
                 src="./Images/director.png" alt="profile picture">
-              <div class="flex items-center divide-x-2 divide-slate-500 dark:divide-slate-700">
-                <cite class="pr-3 font-medium text-slate-900 dark:text-white">Mr. El Kashash Lahna</cite>
-                <cite class="pl-3 text-sm text-slate-500 dark:text-slate-400">Directeur de ISTA ZENATA</cite>
+              <div class="flex flex-col md:flex md:flex-row items-center divide-x-0 divide-y-2 md:divide-x-2 md:divide-y-0 divide-slate-500 dark:divide-slate-700">
+                <cite class="p-0 md:pr-3 font-medium text-slate-900 ">Mr. El Kashash Lahna</cite>
+                <cite class="p-0 md:pl-3 text-sm text-slate-500">Directeur de ISTA ZENATA</cite>
               </div>
             </figcaption>
           </figure>
@@ -131,8 +131,7 @@
 
     <!-- FAQ -->
     <section class="bg-slate-300 ">
-        <h1 class=" titre font-bold text-3xl text-center flex justify-center py-10 mx-auto ">
-            Frequently Asked Question (FAQ) <span class="text-[#00D897] font-bold text-5xl ">.</span>
+        <h1 class=" titre font-bold text-3xl text-center flex justify-center py-10 mx-auto ">FAQ <span class="text-[#00D897]">.</span>
         </h1>
         <section class=" bg-slate-300 text-slate-600 body-font overflow-hidden">
             <div class="container px-5 py-12 mx-auto">
@@ -145,7 +144,7 @@
                   <!-- Dropdown textfield -->
                   <div id="accordion-collapse" data-accordion="collapse">
                       <h2 id="accordion-collapse-heading-1">
-                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rounded   dark:text-black " data-accordion-target="#accordion-collapse-body-1" aria-expanded="true" aria-controls="accordion-collapse-body-1">
+                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  dark:text-black " data-accordion-target="#accordion-collapse-body-1" aria-expanded="true" aria-controls="accordion-collapse-body-1">
                           <span>WHAT IS OFPPT ISTA ZENATA ?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
@@ -161,7 +160,7 @@
                     <div class="py-[10px]"></div>
 
                     <h2 id="accordion-collapse-heading-2">
-                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rounded  dark:text-black " data-accordion-target="#accordion-collapse-body-2" aria-expanded="true" aria-controls="accordion-collapse-body-2">
+                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  ark:text-black " data-accordion-target="#accordion-collapse-body-2" aria-expanded="true" aria-controls="accordion-collapse-body-2">
                           <span>HOW LONG DO THE PROGRAME AT ISTA ZENATA TYPICALLY LAST ?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
@@ -176,7 +175,7 @@
                     </div>
                     <div class="py-[10px]"></div>
                     <h2 id="accordion-collapse-heading-3">
-                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rounded dark:text-black " data-accordion-target="#accordion-collapse-body-3" aria-expanded="true" aria-controls="accordion-collapse-body-3">
+                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rk:text-black " data-accordion-target="#accordion-collapse-body-3" aria-expanded="true" aria-controls="accordion-collapse-body-3">
                           <span>HOW CAN I APPLY FOR A PROGRAME AT ISTA ZENATA ?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
@@ -196,7 +195,7 @@
                     </div>
                     <div class="py-[10px]"></div>
                     <h2 id="accordion-collapse-heading-4">
-                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rounded dark:text-black " data-accordion-target="#accordion-collapse-body-4" aria-expanded="true" aria-controls="accordion-collapse-body-4">
+                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rk:text-black " data-accordion-target="#accordion-collapse-body-4" aria-expanded="true" aria-controls="accordion-collapse-body-4">
                           <span>WHAT IS OFPPT ISTA ZENATA ?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
@@ -223,15 +222,15 @@
 
 
     <!-- Quick About -->
-    <section class="bg-gradient-to-tr from-[#00D897] to-[#00D897B3]  py-32">
-        <div class="container mx-auto text-center h-full space-y-10">
+    <section class="bg-gradient-to-tr from-[#00D897] to-[#00D897B3] h-[100vh] py-32">
+        <div class="container flex flex-col justify-center items-center mx-auto text-center h-full space-y-10">
             <div class="text-5xl font-black text-slate-800">About Us</div>
-            <div class="mx-auto text-center flex justify-center text-xl">Welcome to OFPPT ISTA Zenata, where we're dedicated to shaping futures
+            <div class="mx-auto text-center flex justify-center text-lg md:text-xl">Welcome to OFPPT ISTA Zenata, where we're dedicated to shaping futures
                 and nurturing talent. With a rich history of
                 excellence in education, we provide top-tier professional training programs designed to equip you with
                 the skills and
                 knowledge needed for success in today's dynamic industries.</div>
-            <div><a class="bg-white py-3 px-4 rounded-md text-slate-800 tracking-wider uppercase text-xl font-black shadow-lg shadow-[#ffffff77]"
+            <div class=""><a class="bg-white py-3 px-4 hover:scale-110  hover:tracking-[0.2em] transition-all duration-300 ease-in-out  text-slate-800 uppercase text-xl font-extrabold shadow-lg shadow-[#ffffff77]"
                     href="#">Learn More</a></div>
         </div>
     </section>
